메이크파일 헤더 생성

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,12 +1,24 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: ukim <ukim@42seoul.kr>                     +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2021/07/15 00:05:21 by seapark           #+#    #+#              #
+#    Updated: 2021/07/15 00:07:34 by ukim             ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = philo
 
 SRC = main.c utils.c exit.c init.c print_state.c philosopher.c
 
 DIR = ./srcs/
-
+uimuim42oulk         
 SRCS = $(addprefix $(DIR), $(SRC))
 
-HEADER = includes
+HEADER = includes706uim   
 
 CC = gcc
 
