--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: seapark <seapark@student.42.fr>            +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2021/07/15 00:05:21 by seapark           #+#    #+#              #
+#    Updated: 2021/07/15 00:05:31 by seapark          ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = philo_bonus
 
 SRC = main.c utils.c exit.c init.c print_state.c philosopher.c monitoring.c
